refactor: java 8 compat