@@ -5,10 +5,8 @@ import com.sekwah.advancedportals.core.connector.containers.CommandSenderContain
 import com.sekwah.advancedportals.core.serializeddata.DataTag;
 import com.sekwah.advancedportals.core.util.TagReader;
 import com.sekwah.advancedportals.core.warphandler.Tag;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Set;
+
+import java.util.*;
 import java.util.stream.Collectors;
 
 public abstract class CreateTaggedSubCommand implements SubCommand {
@@ -18,27 +16,27 @@ public abstract class CreateTaggedSubCommand implements SubCommand {
     public List<String> onTabComplete(CommandSenderContainer sender,
                                       String[] args) {
         if (TagReader.isClosedString(args)) {
-            return List.of();
+            return Collections.emptyList();
         }
 
         List<Tag> allTags = this.getRelatedTags();
         List<String> suggestions = new ArrayList<>();
         if (args.length > 0) {
-            var lastArg = args[args.length - 1];
+            String lastArg = args[args.length - 1];
             // Check if the split results in exactly 2 or if its  1 and ends
             // with :
-            var split = lastArg.split(":");
+            String[] split = lastArg.split(":");
             if (split.length == 2
                 || (split.length == 1 && lastArg.endsWith(":"))) {
                 // Loop over tags in allTags and check if the first half of
                 // split is equal to the tag name or alias
                 for (Tag tag : allTags) {
                     // Check if the last tag starts with the tag name or alias
-                    var startsWith = false;
+                    boolean startsWith = false;
                     if (lastArg.startsWith(tag.getName())) {
                         startsWith = true;
                     } else {
-                        var aliases = tag.getAliases();
+                        String[] aliases = tag.getAliases();
                         if (aliases != null) {
                             for (String alias : aliases) {
                                 if (lastArg.startsWith(alias)) {
@@ -49,14 +47,16 @@ public abstract class CreateTaggedSubCommand implements SubCommand {
                         }
                     }
 
-                    if (tag instanceof Tag.AutoComplete autoComplete
+                    if (tag instanceof Tag.AutoComplete
                         && startsWith) {
-                        var argData = split.length == 2 ? split[1] : "";
-                        var tagSuggestions = autoComplete.autoComplete(argData);
+                        Tag.AutoComplete autoComplete = (Tag.AutoComplete) tag;
+                        String argData = split.length == 2 ? split[1] : "";
+                        List<String> tagSuggestions = autoComplete.autoComplete(argData);
 
                         if (tagSuggestions != null) {
-                            if (tag instanceof Tag.Split splitTag) {
-                                var multiTagSplit = splitTag.splitString();
+                            if (tag instanceof Tag.Split ) {
+                                Tag.Split splitTag = (Tag.Split) tag;
+                                String multiTagSplit = splitTag.splitString();
                                 boolean endsWithSplit =
                                     argData.endsWith(multiTagSplit);
                                 String[] items = argData.split(multiTagSplit);
@@ -90,7 +90,7 @@ public abstract class CreateTaggedSubCommand implements SubCommand {
                                         // Remap so the auto completes actually
                                         // show
                                         .map(s -> baseString + s)
-                                        .toList();
+                                        .collect(Collectors.toList());
                             }
 
                             // Loop over suggestions and add split[0] + ":" to
@@ -114,7 +114,7 @@ public abstract class CreateTaggedSubCommand implements SubCommand {
                     if (argTag.NAME.equals(tag.getName())) {
                         return false;
                     }
-                    var aliases = tag.getAliases();
+                    String[] aliases = tag.getAliases();
                     if (aliases != null) {
                         for (String alias : aliases) {
                             if (argTag.NAME.equals(alias)) {
@@ -127,16 +127,14 @@ public abstract class CreateTaggedSubCommand implements SubCommand {
             })
             .forEach(tag -> {
                 suggestions.add(tag.getName());
-                var aliases = tag.getAliases();
+                String[] aliases = tag.getAliases();
                 if (aliases != null) {
-                    suggestions.addAll(Arrays.stream(aliases).toList());
+                    suggestions.addAll(Arrays.stream(aliases).collect(Collectors.toList()));
                 }
             });
 
         // Loop over all suggestions and add : to the end
-        for (int i = 0; i < suggestions.size(); i++) {
-            suggestions.set(i, suggestions.get(i) + ":");
-        }
+        suggestions.replaceAll(s -> s + ":");
 
         return suggestions;
     }
@@ -145,17 +143,18 @@ public abstract class CreateTaggedSubCommand implements SubCommand {
         List<Tag> relatedTags = this.getRelatedTags();
         List<DataTag> processedTags = new ArrayList<>();
 
-        for (var dataTag : dataTags) {
+        for (DataTag dataTag : dataTags) {
             for (Tag tag : relatedTags) {
-                if (tag instanceof Tag.Split splitTag) {
-                    var splitString = splitTag.splitString();
+                if (tag instanceof Tag.Split ) {
+                    Tag.Split splitTag = (Tag.Split) tag;
+                    String splitString = splitTag.splitString();
                     if (splitString != null) {
                         List<String> newValues = new ArrayList<>();
                         for (String split : dataTag.VALUES) {
                             newValues.addAll(
                                 Arrays.stream(split.split(splitString))
                                     .map(String::trim)
-                                    .toList());
+                                    .collect(Collectors.toList()));
                         }
                         dataTag = new DataTag(dataTag.NAME,
                                               newValues.toArray(new String[0]));
